# labels-in-video

./: CMakeLists.txt  README.md  stream.cpp
cmake/modules/: FindFFmpeg.cmake
data/: bak.flv  stream.flv  stream.ts
doc/labels/: README.md
